syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.test.grpc.search";
option java_outer_classname = "SearchProto";

package search;
service SearchService {
   // 四种rpc method
   rpc SearchWithSimpleRpc (SearchRequest) returns (SearchResponse) {};
   rpc SearchWithServerSideStreamRpc (SearchRequest) returns (stream SearchResponse) {};
   rpc SearchWithClientSideStreamRpc (stream SearchRequest) returns (SearchResponse) {};
   rpc SearchWithBidirectionalStreamRpc(stream SearchRequest) returns (stream SearchResponse) {};
}
message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}
message SearchResponse {
  message Result {
    string url = 1;
    string title = 2;
    repeated string snippets = 3;
  }
  repeated Result result = 1;
}